# krokodil

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure
CLI/: CMakeLists.txt
CLI/src/: main.cpp
Examples/: error.kr  hello_world.kr
GUI/: CMakeLists.txt
GUI/src/: main.cpp
Language/: CMakeLists.txt
Language/include/: Expression.hpp  Generator.hpp  Parser.hpp  Scanner.hpp  Token.hpp  TokenType.hpp  Utils.hpp
Language/src/: Scanner.cpp  Token.cpp
Test/: CMakeLists.txt  tests.cpp  tokenizer.cpp
